Add fixes tests for the 'sql to csv' cli